test/compile-fail/resolution/pub/in-root-super/top.rhdl
pub(in super) struct a {}
